DONE update endpoint [put] /user
